ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: message-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /status
        pathType: Prefix
        backend:
          service:
            name: rest-service
            port: 
              number: 80
